[package]
name = "cdnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.20.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
fs_extra = "1.2"