[package]
name = "cdnx"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.20.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5.0"
include_dir = "0.7.4"
